--- a/Aurical/Base.lproj/Main.storyboard
+++ b/Aurical/Base.lproj/Main.storyboard
@@ -6,6 +6,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -28,7 +30,7 @@
         <!--Audiobooks-->
         <scene sceneID="VgW-fR-Quf">
             <objects>
-                <tableViewController title="Audiobooks" id="pGg-6v-bdr" customClass="ACBookViewController" sceneMemberID="viewController">
+                <tableViewController title="Audiobooks" id="pGg-6v-bdr" customClass="BookViewController" customModule="Aurical" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="22" sectionFooterHeight="22" id="mLL-gJ-YKr">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -78,7 +80,7 @@
         <!--Part View Controller-->
         <scene sceneID="kV6-wb-QL2">
             <objects>
-                <tableViewController id="ag1-Sn-hwO" customClass="ACPartViewController" sceneMemberID="viewController">
+                <tableViewController id="ag1-Sn-hwO" customClass="PartViewController" customModule="Aurical" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="22" sectionFooterHeight="22" id="olA-km-nka">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -126,7 +128,7 @@
         <!--Detail-->
         <scene sceneID="Cn3-H9-jdl">
             <objects>
-                <viewController title="Detail" id="Ah7-4n-0Wa" customClass="ACPlayerViewController" sceneMemberID="viewController">
+                <viewController title="Detail" id="Ah7-4n-0Wa" customClass="PlayerViewController" customModule="Aurical" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="cIm-e0-J51"/>
                         <viewControllerLayoutGuide type="bottom" id="a0L-h9-sNL"/>
@@ -135,17 +137,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="wvg-Mr-JRO">
-                                <rect key="frame" x="55" y="392" width="200" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="wvg-Mr-JRO">
+                                <rect key="frame" x="34" y="404" width="307" height="31"/>
                                 <connections>
                                     <action selector="sliderScrubbed:" destination="Ah7-4n-0Wa" eventType="valueChanged" id="dZ6-jl-Oe7"/>
                                 </connections>
                             </slider>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yqs-J1-AMi">
-                                <rect key="frame" x="0.0" y="64" width="320" height="320"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Battle Magic (Unabridged)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OH9-kL-hhk">
                                 <rect key="frame" x="15" y="424" width="280" height="24"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -198,11 +195,26 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yqs-J1-AMi">
+                                <rect key="frame" x="26" y="74" width="320" height="320"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="yqs-J1-AMi" secondAttribute="height" multiplier="323:320" constant="-3" id="d6g-CK-Doq"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="yqs-J1-AMi" firstAttribute="top" secondItem="cIm-e0-J51" secondAttribute="bottom" constant="10" id="GZh-cJ-Ybw"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yqs-J1-AMi" secondAttribute="trailing" constant="13" id="WzZ-gG-pdS"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="wvg-Mr-JRO" secondAttribute="trailing" constant="20" id="aZN-kU-fyl"/>
+                            <constraint firstItem="yqs-J1-AMi" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leadingMargin" constant="10" id="jPd-Ze-bFc"/>
+                            <constraint firstItem="wvg-Mr-JRO" firstAttribute="top" secondItem="yqs-J1-AMi" secondAttribute="bottom" constant="10" id="lCU-kH-m6O"/>
+                            <constraint firstItem="wvg-Mr-JRO" firstAttribute="top" secondItem="yqs-J1-AMi" secondAttribute="bottom" constant="10" id="lRV-Nj-Fkd"/>
+                            <constraint firstItem="wvg-Mr-JRO" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leadingMargin" constant="20" id="uEU-eU-GSw"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Chapter 1" id="cra-N8-TIN">
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="bookmarks" id="9It-s1-aA7">
+                        <barButtonItem key="rightBarButtonItem" systemItem="bookmarks" id="9It-s1-aA7">
                             <connections>
                                 <segue destination="GNc-Xf-Zlr" kind="modal" identifier="ShowChapters" modalTransitionStyle="flipHorizontal" id="F83-i4-Eco"/>
                             </connections>
@@ -287,6 +299,14 @@
                 <exit id="dCT-vp-mRM" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1840" y="64"/>
+        </scene>
+        <!--AV Player View Controller-->
+        <scene sceneID="1SC-hM-hCA">
+            <objects>
+                <avPlayerViewController videoGravity="AVLayerVideoGravityResizeAspect" id="q76-CY-obQ" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0u9-72-4kK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2288" y="62"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
